# mimic_stable_no_history

./: CMakeLists.txt  diff_main.txt  hostfile  main.cpp  makefile  module.mk
US3D_Routine/: Makefile  a.out  us3d_user.F90
US3D_Routine/example/: clean_dir.bash  input.inp  run_post.bash
energyPy/: Cpp2Py.cpp  energy.cpp  makefile  run_energy.py
madamPy/: PyPartiClass.cpp  energy.cpp  energy.h  madam.cpp  madam.py  makefile  makefile_madam  makefile_parti  parti.py  run_partiClass.py  setup.py
notes/: gitNotes.txt
platforms_cmake/: MacOSX_Dirk_home.cmake  MacOSX_Dirk_work.cmake  MacOSX_Dirk_work_serialHDF5.cmake
platforms_make/: osxdirk.mk  osxdirkV2.mk  osxdirkV3.mk  pleiades.mk  pleiadesV2.mk  pleiadesV3.mk  pleiadesV4.mk
src/: NekFace.cpp  NekFace.h  adapt.h  adapt_DefinePrismMesh.cpp  adapt_DefinePrismMesh.h  adapt_array.h  adapt_bltopology.cpp  adapt_bltopology.h  adapt_boundary.cpp  adapt_boundary.h  adapt_compute.cpp  adapt_compute.h  adapt_datastruct.h  adapt_distri_parstate.cpp  adapt_distri_parstate.h  adapt_geometry.cpp  adapt_geometry.h  adapt_hashutils.h  adapt_io.cpp  adapt_io.h  adapt_math.cpp  adapt_math.h  adapt_operations.cpp  adapt_operations.h  adapt_output.cpp  adapt_output.h  adapt_parmetisstate.h  adapt_parmetisstate2.h  adapt_parops.cpp  adapt_parops.h  adapt_parstate.cpp  adapt_parstate.h  adapt_partition.cpp  adapt_partition.h  adapt_prismaticlayer.cpp  adapt_prismaticlayer.h  adapt_recongrad.cpp  adapt_recongrad.h  adapt_redistribute.cpp  adapt_redistribute.h  (+6 more)
tools/: 3d_grad_rec.py  display_conn_grid_layout.py  isolate_run.py  make_test_array.py  plot_heatFlux_cylinder.py  pltconv.py  pltstagline.py  read_nodes.py  run_devel.pbs  scaling.py  test_grid.h5
unit_tests/: CMakeLists.txt
unit_tests/gradient_reconstruction_test/: README.txt  errors.ref  main.cpp  makefile  run_gradientReconstruction_test.pbs
unit_tests/gradient_reconstruction_test/inputs/: conn.h5  grid.h5  metric.inp
unit_tests/partitioning_test/: main.cpp  makefile  run_partition_test.pbs
unit_tests/scheduling_test/: README.txt  main.cpp  makefile
unit_tests/us3d2nektar/: CMakeLists.txt  main.cpp
utilities/convertHex2Hybrid/: CMakeLists.txt  main.cpp
utilities/convertHex2Hybrid_new/: CMakeLists.txt  main.cpp  makefile
utilities/convertUS3D_to_CGNS/: CMakeLists.txt  main.cpp
utilities/convertUS3D_to_Nektar++/: CMakeLists.txt  main.cpp  makefile
utilities/convertUS3D_to_Nektar++_w_SinglePrismLayer/: CMakeLists.txt  main.cpp
